update page order detail

--- a/user-page/src/app/layout/header/header.component.html
+++ b/user-page/src/app/layout/header/header.component.html
@@ -126,20 +126,28 @@
                   >Thành phần</a
                 >
               </li>
+              <li>
+                <a href="javascript:;" (click)="changePage('/order-detail')"
+                  >Đơn hàng</a
+                >
+              </li>
             </ul>
           </div>
         </div>
-<!--         <div class="col-sm-3">
+        <div
+          class="col-sm-3"
+          *ngIf="!(page == '/composition' || page == '/order-detail')"
+        >
           <div class="search_box pull-right">
             <input
               type="text"
               name="search"
-              [(ngModel)]="composition"
+              [(ngModel)]="searchObj.value"
               (keyup.enter)="search()"
               placeholder="Tìm kiếm"
             />
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
