--- a/admin-page/src/app/views/brand/brand.component.html
+++ b/admin-page/src/app/views/brand/brand.component.html
@@ -22,6 +22,23 @@
                   </select>
                 </div>
               </div>
+              <div class="form-group">
+                <div class="col-md-6">
+                  <input
+                    class="form-control"
+                    name="nameSearch"
+                    [(ngModel)]="nameSearch"
+                    placeholder="Tên nhãn hiệu"
+                  />
+                </div>
+              </div>
+              <button
+                class="btn btn-primary"
+                type="button"
+                (click)="searchBrandByName()"
+              >
+                Tìm kiếm
+              </button>
             </form>
           </div>
         </div>
@@ -39,18 +56,18 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let ca of brands">
-                  <td>{{ ca.name }}</td>
-                  <td>{{ ca.description }}</td>
+                <tr *ngFor="let br of brands">
+                  <td>{{ br.name }}</td>
+                  <td>{{ br.description }}</td>
                   <td>
                     <button
-                      (click)="openModal(ca, 'edit')"
+                      (click)="openModal(br, 'edit')"
                       class="btn btn-square btn-primary btn-sm"
                     >
                       Chỉnh sửa
                     </button>
                     <button
-                      (click)="remove(ca.brandId)"
+                      (click)="remove(br)"
                       class="btn btn-square btn-danger btn-sm"
                     >
                       Xóa
