--- a/admin-page/src/app/views/product/product.component.html
+++ b/admin-page/src/app/views/product/product.component.html
@@ -6,36 +6,47 @@
           <h3><b>Sản phẩm</b></h3>
           <div class="row" style="margin-top: 20px">
             <form class="form-inline">
-              <div class="form-group">
-                <label for="category" class="col-md-6">Danh mục</label>
-                <div class="col-md-6">
-                  <select
-                    class="form-control"
-                    name="categoryList"
-                    id="category"
-                    (change)="getBrands($event.target.value)"
-                  >
-                    <option [value]="ca.id" *ngFor="let ca of categories">
-                      {{ ca.name }}
-                    </option>
-                  </select>
-                </div>
+              <div class="form-group mb-2">
+                <label for="category">Danh mục</label>
+                <select
+                  class="form-control"
+                  name="categoryList"
+                  id="category"
+                  (change)="getBrands($event.target.value)"
+                >
+                  <option [value]="ca.id" *ngFor="let ca of categories">
+                    {{ ca.name }}
+                  </option>
+                </select>
               </div>
-              <div class="form-group">
-                <label for="category" class="col-md-6">Nhãn hiệu</label>
-                <div class="col-md-6">
-                  <select
-                    class="form-control"
-                    name="brandList"
-                    id="brand"
-                    (change)="getProducts($event.target.value)"
-                  >
-                    <option [value]="ca.brandId" *ngFor="let ca of brands">
-                      {{ ca.name }}
-                    </option>
-                  </select>
-                </div>
+              <div class="form-group mb-2" style="padding: 0 10px 0 10px">
+                <label for="category">Nhãn hiệu</label>
+                <select
+                  class="form-control"
+                  name="brandList"
+                  id="brand"
+                  (change)="getProducts($event.target.value)"
+                >
+                  <option [value]="ca.brandId" *ngFor="let ca of brands">
+                    {{ ca.name }}
+                  </option>
+                </select>
               </div>
+              <div class="form-group mx-sm-3 mb-2">
+                <input
+                  class="form-control"
+                  name="nameSearch"
+                  [(ngModel)]="nameSearch"
+                  placeholder="Tên sản phẩm"
+                />
+              </div>
+              <button
+                class="btn btn-primary mb-2"
+                type="button"
+                (click)="searchProductByName()"
+              >
+                Tìm kiếm
+              </button>
             </form>
           </div>
         </div>
