update bug search

--- a/admin-page/src/app/views/cart-detail/cart-detail.component.html
+++ b/admin-page/src/app/views/cart-detail/cart-detail.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header"><b>Chi tiết đơn hàng</b></div>
-     <!--    <span style="margin-left: 20px; font-style: italic; margin-top: 20px">
+        <!--    <span style="margin-left: 20px; font-style: italic; margin-top: 20px">
           <a (click)="openModal('', 'create')" href="javascript:;"
             >Create new</a
           >
@@ -16,6 +16,7 @@
                   <th>Sản phẩm</th>
                   <th>Số lượng</th>
                   <th>Đơn giá</th>
+                  <th>Ngày mua</th>
                   <th></th>
                 </tr>
               </thead>
@@ -24,7 +25,8 @@
                   <td>{{ od.product.nameProduct }}</td>
                   <td>{{ od.quantity }}</td>
                   <td>{{ od.product.price }}</td>
-                  <td>
+                  <td>{{od.dateTrade}}</td>
+                  <td *ngIf="od.status < 5">
                     <button
                       (click)="openModal(od, 'edit')"
                       class="btn btn-square btn-primary btn-sm"
